# folio_migration_web

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/commands/: add-api.md  add-page.md  deploy.md
deployment/: DEPLOY.md  folio-migration-web.service  nginx-common.conf  nginx-folio-migration.conf  nginx.conf  start.sh
docs/: 095_holdings_items_migration_workflow.md  SRS_objectType_analysis.md  batch_poster_guide.md  bibs_import_comparison.md  bibs_transformer_guide.md  folio_migration_tools_architecture_overview.md  folio_migration_tools_issue_batchposter_created_updated.md  folio_migration_tools_issues.md  holdings_csv_transformer_guide.md  holdings_items_migration_guide.md  items_transformer_guide.md  loans_migration_guide.md  mapping-files-analysis.md  task-config-parameters.md  task-configuration-analysis.md  transform_bibs_guide.md  user_import_mechanisms_comparison.md
docs/analysis/: mapping-files-analysis.md  task_batch_poster.md  task_bibs_transformer.md  task_holdings_csv_transformer.md  task_items_transformer.md  task_loans_migrator.md  task_manual_feefines_transformer.md  task_requests_migrator.md  task_user_transformer.md
docs/guides/: batch_poster_guide.md  (+12 more)
templates/: base.html  index.html
tools/: convert_hylib_feefines.py  convert_hylib_holdings_csv.py  convert_hylib_loans.py  convert_hylib_requests.py  convert_thu_feefines.py  convert_thu_loans.py  convert_thu_requests.py  delete_holdings_by_instance.py  extract_095_standard (linux).py  extract_095_standard.py  folio_env.sh.example  folio_task_analyzer.py  get_thu_env.sh
(+58 files in other folders)
