[project]
name = "folio-migration-web"
version = "0.1.0"
description = "Web application for FOLIO migration project management"
authors = [{ name = "FOLIO-FSE Team" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.1.0",
    "cryptography>=44.0.0",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.28.0",
    "python-dotenv>=1.0.0",
    "pydantic-settings>=2.0.0",
    "pymarc>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[project.scripts]
folio-migration-web = "folio_migration_web.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/folio_migration_web"]

[tool.ruff]
line-length = 100
target-version = "py310"
